--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <title>Carousel</title>
   </head>
   <body>
+    <button class="button" id="left">👈</button>
     <nav>
       <ul id="product-list"></ul>
     </nav>
+    <button class="button" id="right">👉</button>
     <script src="./products.js"></script>
     <script src="./script.js"></script>
   </body>
